added link comment for the scheme

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,6 @@
+/* The colour scheme that I am using:
+https://coolors.co/d8e2f7-8598bf-241c1d-40494f-f3f8fc */
+
 body, html {
     margin: 0;
 	font-family: 'Times New Roman';
